--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 
 spring.datasource.url=jdbc:h2:mem:supplier
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=
+spring.datasource.password=
 spring.sql.init.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
